wip on datalake integration