@@ -36,30 +36,6 @@ public class DataLakeExtension implements ServiceExtension {
     @EdcSetting
     private static final String STUB_URL = "edc.demo.http.destination.url";
 
-    @EdcSetting
-    private static final String TOKENMANAGEMENT_ADDRESS = "datalake.oauth.address";
-    
-    @EdcSetting
-    private static final String TOKENMANAGEMENT_CLIENT_ID = "datalake.oauth.client.id";
-    
-    @EdcSetting
-    private static final String TOKENMANAGEMENT_CLIENT_SECRET = "datalake.oauth.client.secret";
-
-    @EdcSetting
-    private static final String TOKENMANAGEMENT_CLIENT_APP_NAME = "datalake.oauth.client.app.name";
-
-    @EdcSetting
-    private static final String TOKENMANAGEMENT_CLIENT_APP_VERSION = "datalake.oauth.client.app.version";
-
-    @EdcSetting
-    private static final String APPLICATION_TENANT = "datalake.tenant";
-
-    @EdcSetting
-    private static final String SNS_TOPIC_ARN = "datalake.event.destination";
-
-    @EdcSetting
-    private static final String DATALAKE_ADDRESS = "datalake.address";
-
     @Inject
     private DataOperatorRegistry dataOperatorRegistry;
 
@@ -69,38 +45,14 @@ public class DataLakeExtension implements ServiceExtension {
         // create Data Lake client
         final String destinationUrl = context.getSetting(STUB_URL, "http://missing");
 
-
-        final String tokenmanagementClientId = context.getSetting(TOKENMANAGEMENT_CLIENT_ID, "");
-        final String tokenmanagementClientSecret = context.getSetting(TOKENMANAGEMENT_CLIENT_SECRET, "");
-        final String tokenmanagementClientAppName = context.getSetting(TOKENMANAGEMENT_CLIENT_APP_NAME, "");
-        final String tokenmanagementClientAppVersion = context.getSetting(TOKENMANAGEMENT_CLIENT_APP_VERSION, "");
-        final String tokenmanagementAddress = context.getSetting(TOKENMANAGEMENT_ADDRESS, "");
-        final String dataLakeAddress = context.getSetting(DATALAKE_ADDRESS, "");
-
-        final String applicationTenant = context.getSetting(APPLICATION_TENANT, "presdev");
-        final String snsTopicArn = context.getSetting(SNS_TOPIC_ARN, "");
-       
-        System.out.println("datalake.oauth.clientId=" + tokenmanagementClientId);
-        System.out.println("datalake.oauth.clientSecret=" + tokenmanagementClientSecret);
-        System.out.println("datalake.tenant=" + applicationTenant);
-        System.out.println("datalake.address=" + dataLakeAddress);
-
-        final URL url;
+        final URI uri;
+        final DataLakeClient dataLakeClient;
         try {
-            url = new URL(dataLakeAddress);
-            final OauthClientDetails oauthClientDetails = new OauthClientDetails(tokenmanagementClientId, tokenmanagementClientSecret,
-            tokenmanagementClientAppName, tokenmanagementClientAppVersion, applicationTenant, new URL(tokenmanagementAddress));
-            DataLakeClientImpl clientImpl = new DataLakeClientImpl(oauthClientDetails, new URL(dataLakeAddress));
-            DataLakeClientImpl.setInstance(clientImpl);
-            URL createdUrl = clientImpl.getUrl("{\"paths\":[{\"path\":\"data/ten=castidev/data.csv\"}]}");
-            System.out.println("Created presigned url: " + createdUrl.toString());
-        } catch (MalformedURLException  | DataLakeException e) {
-            e.printStackTrace();
+            uri = new URL(destinationUrl).toURI();
+            dataLakeClient = new DataLakeClientImpl(uri.toURL());
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new IllegalArgumentException("Bad destination url given", e);
         }
-
-        final DataLakeClient dataLakeClient;
-        dataLakeClient = new DataLakeClientImpl(url);
 
 
         // create Data Lake Reader
